Spaces are evil

--- a/editors/Atom.html
+++ b/editors/Atom.html
@@ -18,7 +18,7 @@ There are loads of cool packegees that you can download for atom, such as 'Backr
 You can even create your own syntax and UI themes if you don't like any of the presets/ones avalible to download. Also, as you can see in the screenshot below you are able to edit any of the packages you download allowing you to make atom more personal.
 </p>
 
-<img src="/Graphics/images/Atom Screenshot.png"/>
+<img src="/Graphics/images/Atom-Screenshot.png"/>
 
 <p>
 For more information about how wonderful Atom is or to download this amazing editor please click the link below.
