--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,8 @@ layout: page
 <ul class="posts">
 {% for project in site.data.projects %}
   <li>
-  {{project.name}} - <a href={{project.github}}>Github repo</a>
+  <p><b>{{project.name}}</b> - <a href={{project.github}}>Github repo</a></p>
+  <p><i>{{project.description}}</i></p>
   </li>
 {% endfor %}
 </ul>
