Added baseurl to links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ improve your skills as a programmer while enjoying the pleasant company of other
 <p>
 Can't wait to come along? Well we meet every Thursday in M/0.33 in the School of Mathematics building at 16:00. <br/>
 Do you think it sounds like a great idea, but are looking for an excuse to turn up? Then be sure to check out our
-<a href="inspiration.html">Inspiration</a> page.
+<a href="{{site.baseurl}}/inspiration.html">Inspiration</a> page.
 </p>
 
 <p><i><b>Disclaimer:</b> This website was made by programmers for programmers - please forgive any spelling mistakes!</i></p>
