--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ improve your skills as a programmer while enjoying the pleasant company of other
 </p>
 
 <p>
-Can't wait to come along? Well we meet every Thursday in M/0.33 in the School of Mathematics building at 16:00. <br/>
+Can't wait to come along? Well we meet in M/0.33, day and time TBC, in the School of Mathematics building at 16:00. <br/>
 Do you think it sounds like a great idea, but are looking for an excuse to turn up? Then be sure to check out our
 <a href="{{site.baseurl}}/inspiration.html">Inspiration</a> page.
 </p>
