--- a/projects/index.html
+++ b/projects/index.html
@@ -8,6 +8,7 @@ layout: page
   <li>
   <p><b>{{project.name}}</b> - <a href={{project.github}}>Github repo</a></p>
   <p><i>{{project.description}}</i></p>
+  <p><a href={{project.link}}>More info</a></p>
   </li>
 {% endfor %}
 </ul>
