Getting there, I have a drop down menu working :) , it is just above the normal menu bar. :(

--- a/404.html
+++ b/404.html
@@ -3,5 +3,4 @@ layout: page
 title: 404 - Page not found
 ---
 
-<p>The page you have tried to access does not exists. Click <a href="{{ site.baseurl }}/">here</a> to go back to the homepage.</p>
-
+<p>The page you have tried to access does not exist. Click <a href="{{ site.baseurl }}/">here</a> to go back to the homepage.</p>
