--- a/reference.html
+++ b/reference.html
@@ -7,7 +7,7 @@ categories: inspiration
 <p> There is so much you can do during your time at Code Club anything
     from learning a new programming languages such as <a href="{{site.baseurl}}/languages/java.html">Java</a>
     or <a href="{{site.baseurl}}/languages/haskell.html">Haskell</a> to useful tools such
-    as <a href="#">Git</a> for version control or <a href="{{site.baseurl}}/editors/vim.html">Vim</a>
+    as <a href="https://git-scm.com">Git</a> for version control or <a href="{{site.baseurl}}/editors/vim.html">Vim</a>
     for text editing to hacking away in <a href="http://pi.minecraft.net/?page_id=14">Minecraft</a>
     for the Raspberry Pi! You are only limited by your imagination!
 </p>
