Few changes to reference and getting involved pages
- Projects can now be toggled as 'active' or 'not active'
- To mark a project as active simply add `active: true` to the project's
  data in `_data/projects.yml`
- Active projects are listed on the getinvolved page with a link to the
  full list of projects
- Divided languages between "real" languages and "forfun" languages and
  have seperate sections for them on the main reference page
- To mark a language as "forfun" simply add the tag `forfun` in the YAML
  front matter of the language's page
- Programming challenges have been moved from the reference page to the
  getinvolved page
- Updated home page content to reflect the new structure of the site

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ improve your skills as a programmer while enjoying the pleasant company of other
 <p>
 Can't wait to come along? Well we meet in M/0.33, 16:00 - 18:00 on a Thursday, in the School of Mathematics building. <br/>
 Do you think it sounds like a great idea, but are looking for an excuse to turn up? Then be sure to check out our
-<a href="{{site.baseurl}}/reference.html">Inspiration</a> page.
+<a href="{{site.baseurl}}/getinvolved.html">getting involved</a> page.
 </p>
 
 <p><i><b>Disclaimer:</b> This website was made by programmers for programmers - please forgive any spelling mistakes!</i></p>
@@ -38,4 +38,4 @@ Do you think it sounds like a great idea, but are looking for an excuse to turn 
       {% include post_link.html %}
   {% endfor %}
 </ul>
-</p> 
+</p>
