Fixing the rest of the links

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -10,7 +10,7 @@ categories: getinvolved
   There are many concurrent projects being worked on at code club, below is a
   list of all the active projects currently being developed. If wish want to see
   a list of all projects then you can find them
-  <a href="{{site.baseurl}}/projects/">here</a> (if you see a project that interests
+  <a href="/projects/">here</a> (if you see a project that interests
   you there then by all means bring it back from the dead!)
 </p>
 
