--- a/reference.html
+++ b/reference.html
@@ -12,7 +12,7 @@ categories: inspiration
 
 <p>
   This section of the site is under constant development and if you find that we are missing something than we
-  strongly recommend that you <a href="{{site.baseurl}}/getinvolved.html">get involved</a> and send us a
+  strongly recommend that you <a href="/getinvolved.html">get involved</a> and send us a
   pull request containing the missing information.
 </p>
 
@@ -21,10 +21,10 @@ categories: inspiration
     There are more programming languages than stars in the galaxy... OK
     <i>slight</i> exaggeration but there are a lot of them. Created for any
     possible purpose imaginable from building video games to driving rovers on Mars or
-    simply trying to <a href="{{site.baseurl}}/languages/brainfk.html">confuse</a> the programmer using them!
+    simply trying to <a href="/languages/brainfk.html">confuse</a> the programmer using them!
 </p>
-<p> Some of the more popular languages include <a href="{{site.baseurl}}/languages/java.html">Java</a>,
-    <a href="{{site.baseurl}}/languages/python.html">Python</a> and <a href="{{site.baseurl}}/languages/C++.html">C++</a>.
+<p> Some of the more popular languages include <a href="/languages/java.html">Java</a>,
+    <a href="/languages/python.html">Python</a> and <a href="/languages/C++.html">C++</a>.
     However there are many more than that! Below is just a sample of them.
 </p>
 <div class="two-cols">
@@ -32,7 +32,7 @@ categories: inspiration
         {% for page in site.pages %}
             {% if page.categories contains "languages" %}
 	        {% unless page.tags contains "forfun" %}
-                    <li><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>
+                    <li><a href="{{ page.url }}">{{ page.title }}</a>
 	        {% endunless %}
             {% endif %}
         {% endfor %}
@@ -56,7 +56,7 @@ categories: inspiration
         {% for page in site.pages %}
             {% if page.categories contains "languages" %}
 	        {% if page.tags contains "forfun" %}
-                    <li><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>
+                    <li><a href="{{ page.url }}">{{ page.title }}</a>
 	        {% endif %}
             {% endif %}
         {% endfor %}
@@ -69,7 +69,7 @@ categories: inspiration
     <ul>
         {% for pages in site.pages %}
             {% if pages.categories contains 'editors' %}
-                <li><a href="{{ site.baseurl }}{{ pages.url }}">{{ pages.title }}</a>
+                <li><a href="{{ pages.url }}">{{ pages.title }}</a>
             {% endif %}
         {% endfor %}
     </ul>
