Extracting out project list entries into an include

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -15,13 +15,10 @@ categories: getinvolved
 </p>
 
 <ul class="posts">
-{% for project in site.data.projects %}
+ {% for project_hash in site.data.projects %}
+  {% assign project = project_hash[1] %}
   {% if project.active %}
-    <li>
-    <p><b>{{project.name}}</b> - <a href={{project.github}}>Github repo</a></p>
-    <p><i>{{project.description}}</i></p>
-    {% if project.link %}<p><a href={{project.link}}>More info</a></p>{% endif %}
-    </li>
+    {% include project_link.html %}
   {% endif %}
 {% endfor %}
 </ul>
