--- a/getinvolved.html
+++ b/getinvolved.html
@@ -8,7 +8,7 @@ categories: getinvolved
 
 <p>
   There are many concurrent projects being worked on at code club, below is a
-  list of all the active projects currently being developed. If wish want to see
+  list of all the active projects currently being developed. If you wish want to see
   a list of all projects then you can find them
   <a href="/projects/">here</a> (if you see a project that interests
   you there then by all means bring it back from the dead!)
@@ -31,21 +31,25 @@ categories: getinvolved
 <h3>Programming Challenges</h3>
 
 <p>
-  Don't feel ready yet to contribute to a full blown project? Don't worry below is a list of programming
-  challenges where you can develop your skills further and if you get stuck there will be
-  plenty of people at code club willing to help you get unstuck!
+  Don't feel ready yet to contribute to a full blown project? Don't worry below is a list of
+  programming challenges where you can develop your skills further and if you get stuck there
+  will be plenty of people at code club willing to help you get unstuck!
 </p>
 
 <ul>
-    <li><a href="https://projecteuler.net">Project Euler</a> - A site with over 450 problems many with a
-        mathematical focus to get your teeth into!</li>
-    <li><a href="http://www.reddit.com/r/dailyprogrammer/">Daily Programmer</a> - A subreddit with new problems
-        released on a Monday, Wednesday and Friday increasing in difficulty throughout the week. Challenges are based
-        on a wide variety of topics, often submitted by fellow users of the subreddit</li>
-    <li><a href="http://www.codingame.com/home/platinum-rift">Platinum Rift</a> - An online game.</li>
-    <li><a href="http://programmingpraxis.com/">Programming Praxis</a> - A blog with new exercises posted every few days
+    <li><a href="https://projecteuler.net">Project Euler</a> - A site with over 450 problems
+      many with a mathematical focus to get your teeth into!</li>
+    <li><a href="http://www.reddit.com/r/dailyprogrammer/">Daily Programmer</a> - A subreddit
+      with new problems released on a Monday, Wednesday and Friday increasing in difficulty
+      throughout the week. Challenges are based on a wide variety of topics, often submitted by
+      fellow users of the subreddit.</li>
+    <li><a href="http://www.codingame.com/home/platinum-rift">Platinum Rift</a> - An online
+      game.</li>
+    <li><a href="http://programmingpraxis.com/">Programming Praxis</a> - A blog with new
+      exercises posted every few days
         on a range of topics. Many of them are presented as a word problem.
-    <li><a href="http://vincent-knight.com">Vince's website</a> - A link to the Computing for Mathematics homepage.</li>
+    <li><a href="http://vincent-knight.com">Vince's website</a> - A link to the Computing for
+      Mathematics homepage.</li>
 </ul>
 
 <p>
@@ -61,10 +65,13 @@ categories: getinvolved
 <h3>Contributors</h3>
 
 <ul>
-    {% for contributor in site.data.contributors%}
-<li class="contributor"><b>{{contributor.name}}</b> <i>(<a href="{{contributor.github-page}}">{{contributor.title}}</a>)</i></li>
-    {% endfor %}
+  {% for contributor in site.data.contributors %}
+  {% assign person = contributor[1] %}
+    <li><b>{{person.name}}</b> <i>
+      (<a href="{{person.github-page}}">{{person.title}}</a>)</i></li>
+  {% endfor %}
 </ul>
 <center>
-    <i>Disclamer: This is NOT done in any particular order. It's definitly NOT in ALPHABETICAL order.</i>
+    <i>Disclamer: This is NOT done in any particular order.
+      It's definitly NOT in ALPHABETICAL order.</i>
 </center>
