--- a/getinvolved.html
+++ b/getinvolved.html
@@ -68,7 +68,12 @@ categories: getinvolved
   {% for contributor in site.data.contributors %}
   {% assign person = contributor[1] %}
     <li><b>{{person.name}}</b> <i>
-      (<a href="{{person.github-page}}">{{person.title}}</a>)</i></li>
+      (<a href="{{person.github-page}}">
+        {% if person.title == nil %}
+          ...Pending...</a>)</i></li>
+        {% else %}
+          {{person.title}}</a>)</i></li>
+        {% endif %}
   {% endfor %}
 </ul>
 <center>
