--- a/getinvolved.html
+++ b/getinvolved.html
@@ -68,12 +68,7 @@ categories: getinvolved
   {% for contributor in site.data.contributors %}
   {% assign person = contributor[1] %}
     <li><b>{{person.name}}</b> <i>
-      (<a href="{{person.github-page}}">
-        {% if person.title == '' %}
-          ...Pending...</a>)</i></li>
-        {% else %}
-          {{person.title}}</a>)</i></li>
-        {% endif %}
+      (<a href="{{person.github-page}}">{{person.title | default: '...Pending...'}}</a>)</i></li>
   {% endfor %}
 </ul>
 <center>
