--- a/getinvolved.html
+++ b/getinvolved.html
@@ -67,8 +67,7 @@ categories: getinvolved
 <ul>
   {% for contributor in site.data.contributors %}
   {% assign person = contributor[1] %}
-    <li><b>{{person.name}}</b> <i>
-      (<a href="{{person.github-page}}">{{person.title | default: '...Pending...'}}</a>)</i></li>
+    <li><b>{{person.name}}</b> <i>(<a href="{{person.github-page}}">{{person.title | default: '...Pending...'}}</a>)</i></li>
   {% endfor %}
 </ul>
 <center>
