Fixing invisible menus on mobile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ layout: landingpage
         <p>We meet in M/0.33 School of Maths</p>
         <p>Every Thursday 17:00 - 19:00</p>
 
-        {% include menu.html %}
+        <nav class="landing">
+           {% include menu.html %}
+        </nav>
     </div>
 
     
