Making each section one paragraph and adding double breaks instead

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: landingpage
---- 
+---
 <header class="landing">
     <div class="wrap">
         <h1>Cardiff School of Mathematics</h1>
@@ -14,8 +14,7 @@ layout: landingpage
         </nav>
     </div>
 
-    
-    
+
 </header>
 
 <article class="landing">
@@ -32,15 +31,13 @@ layout: landingpage
                 about programming can get together, hang out and work on
                 whatever project that takes their fancy whether it be as part
                 of a team or solo.
-            </p><br/>
-
-            <p>
+            <br/>
+            <br/>
                 However it's also just a great place to spend your early Thursday
                 evening, spending time with those who share your interests with
                 plenty of laughs, jokes and games to be had.
-            </p><br/>
-
-            <p>
+            <br/>
+            <br/>
                 See for yourself check out some of our session highlights
                 <a href="/sessions.html">here</a> or check out
                 <a href="{% post_url 2015-10-29-How-I-made-a-DOS-at-school %}">this post</a>
@@ -58,33 +55,30 @@ layout: landingpage
             </div>
 
             <p>
-                However Code Club isn't just a great place to hang out, it's also
-                a good opportunity to learn something new and develop your skills!
-            </p><br/>
-
-            <p>
+                However Code Club isn't just a great place to hang out, it's
+                also a good opportunity to learn something new and develop your
+                skills!
+            <br/>
+            <br/>
                 We run semi regular <a href="/workshops/index.html">workshops</a> which
-                are a great 30 minute introduction into all sorts of topics, from
-                the basics of the command line to building web applications with
-                Django!
-            </p><br/>
-
-            <p>
+                are a great 30 minute introduction into all sorts of topics,
+                from the basics of the command line to building web applications
+                with Django!
+            <br/>
+            <br/>
                 We also have a <a href="/blog/index.html">blog</a> where you can
                 find articles written by our members, anything from general
                 code club news to
                 <a href="{% post_url 2015-01-16-making-an-app-in-python-using-kivy-1 %}">
                 building mobile apps with python and kivy.</a>
-            </p><br/>
-
-            <p>
-                Can't find what you're looking for on the blog? Well check out our
-                <a href="/reference.html">reference</a> section. In there we have
-                language and programming tool overviews, everything you need to get
-                started on your next project!
-            </p><br/>
-
-            <p>
+            <br/>
+            <br/>
+                Can't find what you're looking for on the blog? Well check out
+                our <a href="/reference.html">reference</a> section. In there we
+                have language and programming tool overviews, everything you
+                need to get on your next project!
+            <br/>
+            <br/>
                 But perhaps most important of all...
             </p>
 
@@ -103,21 +97,18 @@ layout: landingpage
                 if nobody showed up then it would be a very sad place indeed.
                 That's why we need you!
                 <a href="/getinvolved.html">Get involved</a>, write a blog post,
-                submit a theme for the website or even just show up!               
-            </p><br/>
-
-            <p>
-                There will always be someone around willing to help you get started, so
-                don't worry about being stuck. The atmosphere is always light hearted
-                and sharing experiences is all part of the fun. If you are a seasoned
-                veteran or have never written a line of code in your life, I promise
-                you, there's a place here for you at code club.
+                submit a theme for the website or even just show up!
+            <br/>
+            <br/>
+                There will always be someone around willing to help you get
+                started, so don't worry about being stuck. The atmosphere is
+                always light hearted and sharing experiences is all part of the
+                fun. If you are a seasoned veteran or have never written a line
+                of code in your life, I promise you, there's a place here for
+                you at code club.
             </p><br/>
 
         </div>
 
     </div>
 </article>
-
-
-
