this is a test of emojies on the site

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: landingpage
             </div>
 
             <p>
-                Code club is a place where like minded people who are passionate
+                Code club is a place where :imp: like minded people who are passionate
                 about programming can get together, hang out and work on
                 whatever project that takes their fancy whether it be as part
                 of a team or solo.
