Refactoring layouts and includes
Ok this is a LOT of changes. It aims to simplify the template system we
had many templates with near duplicate code with a lot of redundancy by
refactoring it in this way, while the complexity of some of the
templates may have increased it should now be much easier to make
sweeping changes across the site.

First thing I should note is that these changes should not have any
impact on the current site! Any visitors to the site shouldn't even
notice that these changes have been made.

So what has changed? Let's go through it shall we...

- There are now only 6 templates:
  + `base.html`: This contains the majority of the HTML and defines most
    of the HTML for each page. Every other template npw inherits from this.
  + `blog.html`: This is for the main blog page and each category page
  + `page.html`: This is sort of a "default layout" for most pages on
     the site, like the archive and code of conduct pages.
  + `post.html`: This defines the layout for all our blog posts and
    includes things like the disqus comments
  + `project.html`: Each project page uses this templates
  + `reference.html`: In preparation for an overhaul of the reference
    section of the site both languages and tools now use a common
    reference template.

- The following templates have been deleted:
  + `default.html`: This has been renamed to `base.html`
  + `landingpage.html`: The landing page now inherits from `base.html`
  + `language.html`: Languages now use the reference template
  + `sessions.html`: The sessions page now inherits from the page
     template
  + `tools.html`: The tools now use the reference template

- The number of includes has been dramatically reduced, from 11 to 2.
  This is mostly because most of the includes can now be incoporpated
  into the templates above since there isn't the need to import the HTML
  from across multiple templates. This frees up the includes folder for
  snippets of HTML to be made available to content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
-layout: landingpage
+layout: base
+nomenu: true
+nonstandard: true
 ---
 <header class="landing">
     <div class="wrap">
@@ -10,7 +12,15 @@ layout: landingpage
         <p>Every Thursday 17:00 - 19:00</p>
 
         <nav class="landing">
-           {% include menu.html %}
+            <ul id="menu">
+                <li class="menu-name">Menu</li> 
+
+                {% for item in site.data.menu %}
+                    <li class="menu-item">
+                        <a href="{{item.url}}">{{item.text}}</a>
+                    </li>
+                {% endfor %}
+            </ul> 
         </nav>
     </div>
 
