--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ nonstandard: true
         <h1>Cardiff School of Mathematics</h1>
         <img src="/res/CodeClubLogo.png" alt="Code Club Logo"/>
 
-        <p>We meet in M/0.33 School of Maths</p>
-        <p>Every Wednesday 17:00 - 19:00</p>
+        <p>We meet in Abacws 2.35</p>
+        <p>Every Friday 12:00 - 14:00</p>
 
         <nav class="landing">
             <ul id="menu">
